# WindowsUtils

./: LICENSE.txt  README.md  setup.cfg
src/WindowsUtils/: brightness.py  firewall.py  power.py  scanner.py  scheduler.py  volume.py  wifi.py
src/WindowsUtils/helpers/: Wbem.py  powertypes.py  schedtypes.py  wifitypes.py
tests/: bat_test.bat  test_brightness.py  test_firewall.py  test_power.py  test_scanner.py  test_scheduler.py  test_volume.py  test_wifi.py
