[metadata]
name = WindowsUtils
version = 0.0.1
author = Matthew Stevens
author_email = m24gstevens@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m24gstevens/WindowsUtils
project_urls =
    Bug Tracker = https://github.com/m24gstevens/WindowsUtils/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src